# job-scraper

./: .gitignore  README.md  main.py  pyproject.toml
jobs/: ai.py  config.py  database.py  google.py  indeed.py  models.py  slack.py
notebooks/: database.ipynb  google.ipynb  indeed.ipynb  main.ipynb
tests/: test_ai.py  test_database.py  test_google.py  test_indeed.py  test_setup.py  test_slack.py
