[tool.poetry]
name = "job-scraper"
version = "0.1.0"
description = ""
authors = ["Carlos Kidman <carlos@qap.dev>"]
readme = "README.md"
packages = [{ include = "job_scraper" }]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
beautifulsoup4 = "^4.12.2"
pyleniumio = "^1.20.0"
langchain = "^0.0.354"
openai = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.11"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
